# cat_caffe

back/: Cargo.toml  README.md
back/src/: admin.rs  auth.rs  db.rs  errors.rs  lib.rs  main.rs
back/src/db/: queries.rs  tables.rs
client/: README.md  index.html  package-lock.json  package.json
client/src/: App.css  App.jsx
client/src/components/: NotFound.jsx  ProtectedRoute.jsx
client/src/pages/admin/components/: AdminHome.jsx  CatForm.jsx  CatList.jsx  CatList.module.css  DishList.jsx  DishList.module.css  Forms.module.css  Generics.module.css  Home.module.css  Login.jsx  LoginForm.jsx  MenuForm.jsx  Register.css  Register.jsx  RegistrationForm.css  RegistrationForm.jsx
client/src/pages/components/: Home.jsx  Home.module.css  Login.jsx  LoginForm.jsx  Register.jsx  RegisterForm.jsx
client/src/utils/: validation.js
