[package]
name = "back"
version = "0.1.0"
edition = "2021"
default-run = "back"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
sqlite = "0.36.2"
dotenv = "0.15.0"
argon2 = "0.5.3"
jsonwebtoken = "9.2"
chrono = "0.4.40"

[[bin]]
name = "setup_db"
path = "src/bin/setup_db.rs"